k8s/commands-depl.yaml
# @format
apiVersion: apps/v1
kind: Deployment
metadata:
  name: commands-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: commandservice
  template:
    metadata:
      labels:
        app: commandservice
    spec:
      containers:
        - name: commandservice
          image: msintro/commandservice:latest
          imagePullPolicy: Never

---
apiVersion: v1
kind: Service
metadata:
  name: commandservice-np-srv
spec:
  type: NodePort
  selector:
    app: commandservice
  ports:
    - name: commandservice
      protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30009

---
apiVersion: v1
kind: Service
metadata:
  name: commandservice-cs-srv
spec:
  type: ClusterIP
  selector:
    app: commandservice
  ports:
    - name: commandservice
      protocol: TCP
      port: 8080
      targetPort: 8080
