k8s/platforms-depl.yaml
# @format
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platforms-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: platformservice
  template:
    metadata:
      labels:
        app: platformservice
    spec:
      containers:
        - name: platformservice
          image: msintro/platformservice:latest
          imagePullPolicy: Never

---
apiVersion: v1
kind: Service
metadata:
  name: platformservice-np-srv
spec:
  type: NodePort
  selector:
    app: platformservice
  ports:
    - name: platformservice
      protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30008

---
apiVersion: v1
kind: Service
metadata:
  name: platformservice-cs-srv
spec:
  type: ClusterIP
  selector:
    app: platformservice
  ports:
    - name: platformservice-http
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: platformservice-grpc
      protocol: TCP
      port: 666
      targetPort: 666
